--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,26 @@
 doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+html(ng-app='myapp')
+	head
+		base(href='/')
+
+		title= title
+		link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/stylesheets/style.css')
+
+
+	body
+		include partials/nav
+		div(ng-view)
+			block content
+
+		script( src="//code.jquery.com/jquery-1.11.2.min.js")
+		script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js")
+
+		script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
+
+		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js")
+		script(src="app/app.js")
+		script(src="app/controllers.js")
+
+
+
