--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,21 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
+nav.navbar-default {
+	background-color: #075033;
+	font color: white;
+	height: 60px;
+	padding: 10px;
+
 }
 
-a {
-  color: #00B7FF;
+.navbar-default .navbar-nav>li>a {
+	 color: white;
+}
+
+.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+  margin-left: -15px;
+  color: white;
+}
+
+div {
+  padding-left: 10px;
 }
