added fontawesome icons

--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -1,2 +1,3 @@
 h1 {{message}}
-P Hey Look cool suff about me.
+h2 Nashville based Jr Front End Developer
+p Christopher Lee Jarvis has always been intrested in art and creative endeavors. His love of creating has led him to delve into web developement at Nashville Software School, Where he is currently a student in Cohort E1(evening).
