--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,13 +1,13 @@
 nav.navbar.navbar-default
   .container
     .navbar-header
-      a.navbar-brand(href='/') Christopher Lee Jarvis
+      a.navbar-brand(href='/')
     ul.nav.navbar-nav.navbar-right
         li
-          a(href='/') Home
+          a(href='/') Twitter
         li
           a(href='/about') About Me
         li
           a(href='/portfolio') Portfolio
         li
-          a(mailto='/clj@ollure.com').i.fa.fa-envelope
+          a(mailto='/clj@ollure.com') i class="fa fa-envelope"
