--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,20 +2,28 @@
 nav.navbar-default {
 	background-color: #075033;
 	font color: white;
-	height: 60px;
+      font-size: 1.5em;
+	height: 80px;
 	padding: 10px;
 
 }
 
 .navbar-default .navbar-nav>li>a {
-	 color: white;
+	color: white;
 }
 
+
 .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
-  margin-left: -15px;
+  font-size: 2em;
+  margin-left: 0px;
   color: white;
 }
 
 div {
-  padding-left: 10px;
+  padding-left: 20px;
+  width: 50%;
 }
+
+/*body {
+	background-color: rgba(102, 151, 0, 0.2);
+}*/
