--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html(ng-app='myapp')
 		title= title
 		link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css')
 
 
 	body
