--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,13 +1,16 @@
-nav.navbar.navbar-default
-  .container
-    .navbar-header
-      a.navbar-brand(href='/')
-    ul.nav.navbar-nav.navbar-right
-        li
-          a(href='/') Twitter
-        li
-          a(href='/about') About Me
-        li
-          a(href='/portfolio') Portfolio
-        li
-          a(mailto='/clj@ollure.com') i class="fa fa-envelope"
+nav.navbar.navbar-inverse
+	.container-fluid
+		.navbar-fixed-bottom
+			ul.nav.navbar-nav.navbar
+				li
+					&copy;2015
+				li
+					a(href='https://github.com/ClJarvis' target='blank').i.fa.fa-github.fa-2x
+				li
+					a
+				li
+					a(href='https://twitter.com/CL_jarvis' target='blank').i.fa.fa-twitter.fa-2x
+				li
+					a(href='http://codepen.io/chrisjarvis' target='blank').i.fa.fa-codepen.fa-2x
+				li
+					a(mailto='/clj@ollure.com' ).i.fa.fa-envelope.fa-2x
