--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,7 +14,7 @@ html(ng-app='myapp')
 		div(ng-view)
 			block content
 
-
+		include partials/footer
 		script( src="//code.jquery.com/jquery-1.11.2.min.js")
 		script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js")
 
