--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -1,7 +1,9 @@
 h1 {{message}}
-p Welcome to my portfolio and online resume.
-    p I'm a student at Nashville Software School.
-    a(href="github.com") git hub
+div
+  div Welcome to my portfolio and online resume.
+       p I'm a student at Nashville Software School.
+       a(href="github.com") git hub
+
 
 div
   // img(src="https://yodaarchives.files.wordpress.com/2015/02/sonoma_panorama2.jpg")
