--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,16 +1,21 @@
-nav.navbar.navbar-inverse
-	.container-fluid
-		.navbar-fixed-bottom
-			ul.nav.navbar-nav.navbar
-				li
-					&copy;2015
-				li
-					a(href='https://github.com/ClJarvis' target='blank').i.fa.fa-github.fa-2x
-				li
-					a
-				li
-					a(href='https://twitter.com/CL_jarvis' target='blank').i.fa.fa-twitter.fa-2x
-				li
-					a(href='http://codepen.io/chrisjarvis' target='blank').i.fa.fa-codepen.fa-2x
-				li
-					a(mailto='/clj@ollure.com' ).i.fa.fa-envelope.fa-2x
+
+nav.navbar.navbar-footer
+
+		// div.row.copy
+			div.col-md-1
+					&copy;2015 //
+		div.row
+			div.col-md-1
+
+			div.col-md-6.col-md-offset-9
+				ul.nav.navbar-nav.navbar
+					li
+
+					li
+						a(href='https://github.com/ClJarvis' target='blank').i.fa.fa-github.fa-2x
+					li
+						a(href='https://twitter.com/CL_jarvis' target='blank').i.fa.fa-twitter.fa-2x
+					li
+						a(href='http://codepen.io/chrisjarvis' target='blank').i.fa.fa-codepen.fa-2x
+					li
+						a(mailto='/clj@ollure.com' ).i.fa.fa-envelope.fa-2x
