--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -1,6 +1,7 @@
 h1 {{message}}
 h2 Nashville based Jr Front End Developer
-div Christopher Lee Jarvis has always been intrested in art and creative endeavors. His love of creating has led him to delve into web developement at Nashville Software School, Where he is currently a student in Cohort E1(evening).
-div.right
-  img(src="https://yodaarchives.files.wordpress.com/2013/11/noshave-001.jpg")
+div Christopher Lee Jarvis has always been inetrested in art and creative endeavors. His love of creating has led him to delve into web developement at Nashville Software School, Where he is currently a student in Cohort E1(evening).
+div
+img(src="https://yodaarchives.files.wordpress.com/2013/11/noshave-001.jpg")
+img(src="https://yodaarchives.files.wordpress.com/2013/11/noshave-001.jpg")
 
