--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,8 @@ html(ng-app='myapp')
 
 		title= title
 		link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css')
 
@@ -21,6 +23,10 @@ html(ng-app='myapp')
 		script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
 
 		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js")
+		script(src="javascripts/jquery.js")
+		script(src="javascripts/angular.js")
+		script(src="javascripts/angular-route.js")
+		script(src="javascripts/bootstrap.min.js")
 		script(src="app/app.js")
 		script(src="app/controllers.js")
 
