--- a/views/partials/nav.jade
+++ b/views/partials/nav.jade
@@ -10,4 +10,4 @@ nav.navbar.navbar-default
         li
           a(href='/portfolio') Portfolio
         li
-          a(mailto='/clj@ollure.com').i.fa.fa-envelope
+          a(href='mailto:clj@ollure.com').i.fa.fa-envelope
