--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -7,7 +7,7 @@ nav.navbar.navbar-footer
 		div.row
 			div.col-md-1
 
-			div.col-md-6.col-md-offset-9
+			div.col-md-6.col-md-offset-4
 				ul.nav.navbar-nav.navbar
 					li
 
@@ -18,4 +18,4 @@ nav.navbar.navbar-footer
 					li
 						a(href='http://codepen.io/chrisjarvis' target='blank').i.fa.fa-codepen.fa-2x
 					li
-						a(mailto='/clj@ollure.com' ).i.fa.fa-envelope.fa-2x
+						a(href="mailto:clj@ollure.com" ).i.fa.fa-envelope.fa-2x
