--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -1,10 +1,7 @@
 h1 {{message}}
-div
-  div Welcome to my portfolio and online resume.
+div.landing
+  div.welcome Welcome to my portfolio and online resume.
        p I'm a student at Nashville Software School.
-
-
-
 div
-  // img(src="https://yodaarchives.files.wordpress.com/2015/02/sonoma_panorama2.jpg")
+
 
