--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -1,7 +1,6 @@
 h1 {{message}}
 h2 Nashville based Jr Front End Developer
-div.about_me Christopher Lee Jarvis has always been inetrested in art and creative endeavors. His love of creating has led him to delve into web developement at Nashville Software School, Where he is currently a student in Cohort E1(evening).
+div.about_me I have always been inetrested in art and creative endeavors. My love of creating has led me to delve into web developement at Nashville Software School, I am currently a student in Cohort E1(evening).
 div.about_me
-  img(src="https://yodaarchives.files.wordpress.com/2013/11/noshave-001.jpg")
 
 //html5 icon fa fa-html5
