--- a/views/partials/portfolio.jade
+++ b/views/partials/portfolio.jade
@@ -1,20 +1,29 @@
+link(rel='stylesheet', href='stylesheets/portfolio.css')
 h1 {{message}}
 div.welcome
   h3 Welcome to my portfolio and online resume.
-       Here you can see examples of my work.
+       P Here you can see examples of my work.
 div.movieapp
-  div.movieappimg
-        img(src="images/screen_grab_movieAgenda.jpg")
-  div
-        h3 Movie Agenda:
-        h4List and Track your favorite movies.
-        p Coauthor on this basic CRUD app. Built with HTML5, CSS, and Bootstrap.
+  div.screen_cap
+    img(src="images/screen_grab_movieAgenda.jpg")
+    div.movtext
+      h3 Movie Agenda:
+      h4 List and track your favorite movies.
+      p Codeveloper on this basic CRUD app. Built with HTML5, CSS, and Bootstrap.
 div.atof
-  div.atofImg
+  div.screen_cap
     img(src="images/screen_grab_ATOF.jpg")
   div.atofText
     h3 A Temptation of Faeries
     p HTML, CSS, graphics, photography
+
+div.cahna
+  div.screen_cap
+    img(src="images/screencap_CAHNA.jpg")
+  div.cahnaText
+    h3 Caldwell Abbay Hall Neighborhood Assocuation
+    h4 informational page for a neighboorhood association
+    p Laguages used: HTML, CSS
 
 
 
