--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-/*html,body,.landing{ height: 100%; width: 100% ; }*/
+html,body,.landing{ height: 100%; width: 100% ; }
 
 body {
   background-color: rgb(255, 255, 255);
