--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,11 +18,11 @@ html(ng-app='myapp')
 
 
 		script( src="//code.jquery.com/jquery-1.11.2.min.js")
-		script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js")
+		//script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js")
 
-		script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
+		//script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
 
-		script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js")
+		//script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js")
 		script(src="javascripts/jquery.js")
 		script(src="javascripts/angular.js")
 		script(src="javascripts/angular-route.js")
