--- a/views/partials/portfolio.jade
+++ b/views/partials/portfolio.jade
@@ -9,21 +9,23 @@ div.movieapp
     div.movtext
       h3 Movie Agenda:
       h4 List and track your favorite movies.
-      p Codeveloper on this basic CRUD app. Built with HTML5, CSS, and Bootstrap.
+      p Codeveloper on this basic CRUD app.
+      h4 {{heading}} HTML5, CSS, and Bootstrap.
 div.atof
   div.screen_cap
     img(src="images/screen_grab_ATOF.jpg")
   div.atofText
     h3 A Temptation of Faeries
-    p HTML, CSS, graphics, photography
+
+    h4 {{heading}} HTML, CSS, graphics, photography
 
 div.cahna
   div.screen_cap
     img(src="images/screencap_CAHNA.jpg")
   div.cahnaText
-    h3 Caldwell Abbay Hall Neighborhood Assocuation
+    h3 Caldwell Abbay Hall Neighborhood Association
     h4 informational page for a neighboorhood association
-    p Laguages used: HTML, CSS
+    h4 {{heading}} HTML, CSS
 
 
 
