--- a/public/stylesheets/portfolio.css
+++ b/public/stylesheets/portfolio.css
@@ -1,38 +1,22 @@
-/*div{
+/*div {
   border-style: solid;
   border-color: red;
 }*/
 
-.screen_cap {
-  height: 100%;
-  width: 100%;
+div.screen_cap {
+/*  height: 45%;*/
+  width: 95%;
 }
 
 .screen_cap img {
   height: 450px;
-  width: 450px;
+  width: 550px;
 }
 
-
-
-/*
-div.atofImg{
-  float: left;
+div.text {
+  /*height: 45%;*/
+  width: 45%;
 }
-
-div.atofText {
-  float: right;
-  height: 450px;
-  width: 450px;
-}
-
-div.cahnaImg{
-  float: left;
-}
-
-div.cahnaText {
-  float: right;
-}*/
 
 
 
