--- a/views/partials/portfolio.jade
+++ b/views/partials/portfolio.jade
@@ -1,31 +1,15 @@
 link(rel='stylesheet', href='stylesheets/portfolio.css')
+
 h1 {{message}}
 div.welcome
-  h3 Welcome to my portfolio and online resume.
+    h3 Welcome to my portfolio and online resume.
        P Here you can see examples of my work.
-div.movieapp
-  div.screen_cap
-    img(src="images/screen_grab_movieAgenda.jpg")
-    div.movtext
+
+    div.screen_cap
+      img(src="images/screen_grab_movieAgenda.jpg")
+    div.text
       h3 Movie Agenda:
       h4 List and track your favorite movies.
       p Codeveloper on this basic CRUD app.
       h4 {{heading}} HTML5, CSS, and Bootstrap.
-div.atof
-  div.screen_cap
-    img(src="images/screen_grab_ATOF.jpg")
-  div.atofText
-    h3 A Temptation of Faeries
-
-    h4 {{heading}} HTML, CSS, graphics, photography
-
-div.cahna
-  div.screen_cap
-    img(src="images/screencap_CAHNA.jpg")
-  div.cahnaText
-    h3 Caldwell Abbay Hall Neighborhood Association
-    h4 informational page for a neighboorhood association
-    h4 {{heading}} HTML, CSS
-
-
 
