added Fun in the blanks detail to port page

--- a/views/partials/portfolio.jade
+++ b/views/partials/portfolio.jade
@@ -8,8 +8,15 @@ div.welcome
     div.screen_cap
       img(src="images/screen_grab_movieAgenda.jpg")
     div.text
+      h3 Fun In The Blanks:
+      h4 A personalized children's story book made with
+      p Frontend Capstone project. A children mad libs style story where the child can take part in classic fairy tales.
+      h4 {{heading}} AngularJS, HTML, CSS, JSON, Bootstrap, and firebase.
+
+   div.screen_cap
+      img(src="images/screen_grab_movieAgenda.jpg")
+    div.text
       h3 Movie Agenda:
       h4 List and track your favorite movies.
       p Codeveloper on this basic CRUD app.
       h4 {{heading}} HTML5, CSS, and Bootstrap.
-
